[gd_scene load_steps=2 format=3 uid="uid://bvkiaoihof13n"]

[ext_resource type="Script" path="res://Scripts/statsUI.gd" id="1_p8vbf"]

[node name="StatsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8vbf")

[node name="healthMargin" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 70.0
offset_bottom = 64.0
scale = Vector2(0.4, 0.4)
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 5

[node name="healthDisplay" type="HBoxContainer" parent="healthMargin"]
layout_mode = 2

[node name="roomMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_constants/margin_right = 5

[node name="roomDisplay" type="Label" parent="roomMargin"]
layout_mode = 2
text = "Room:"
horizontal_alignment = 1
